# plugins_metrics-reporter-prometheus

./: BUILD  MODULE.bazel  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  metrics-reporter-prometheus_plugin_deps.lock.json  metrics-reporter-prometheus_third_party_runtime_jars.allowlist.txt  pom.xml  project.config
src/main/java/com/googlesource/gerrit/plugins/metricsreporterprometheus/: CapabilityChecker.java  FilteredMetricRegistry.java  GerritBuildInformationMetric.java  GerritConfigInfoMetric.java  GerritPluginInformationMetrics.java  GerritPrometheusExporter.java  GerritPrometheusHttpModule.java  GerritPrometheusModule.java  PrometheusMetricsServer.java  ViewMetricsCapability.java
src/main/java/com/googlesource/gerrit/plugins/metricsreporters/: CapabilityChecker.java  Configuration.java  GerritPrometheusExporter.java  GerritPrometheusExporterConfig.java  GerritPrometheusHttpModule.java  GerritPrometheusMetricRegistryListener.java  GerritPrometheusModule.java  ViewMetricsCapability.java
src/main/resources/Documentation/: about.md  build.md  config.md
src/test/java/com/googlesource/gerrit/plugins/metricsreporters/: GerritPrometheusMetricRegistryListenerTest.java
